...
                                        alignItems: "center",
                                    }}
                                >
                                    <PaperIconButton
                                        testID={
                                            activeSong?.rating
                                                ? "unlike-button"
                                                : "like-button"
                                        }
                                        onPress={() => {
                                            toggleLike(activeSong?.id);
                                            updateTrack({
                                                rating: activeSong?.rating
                                                    ? 0
...
                            testID="sleep-button"
                            icon="alarm"
                            iconColor={Colors.primary}
                            disabled
                        />
                        <PaperIconButton
                            testID="options-button"
                            icon="dots-vertical"
                            onPress={async () => {
                                await setSelectedSong(activeSong as Song);
                                openSongOptions();
                            }}
                            disabled={!activeSong}
...
